worked on hero section

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,10 @@ h1 span {
     color: blue;
 }
 
+.container {
+  height: 100%;
+}
+
 
 /* ---------------- NAVIGATION STYLES ------------------ */
 .Nav_logoImg {
@@ -56,6 +60,83 @@ h1 span {
 }
 
 /* -------------- HERO SECTION STYLES ------------------ */
+
+.Hero_Section {
+  height: 80vh;
+}
+
+.Hero_Section::before {
+  content: '';
+  position: absolute;
+  width: 200px;
+  height: 100%;
+  background-color: #eaeaea;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.Hero_Wrapper {
+  position: relative;
+  height: 100%;
+}
+
+.Hero_WrapperContent {
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+}
+
+.Hero_IconsList {
+  margin: 0 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.Hero_MediaWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.ImageWrapper {
+  position: relative;
+}
+
+.Hero_MediaWrapper img:nth-child(1) {
+  position: absolute;
+  width: 300px;
+  height: auto;
+  aspect-ratio: 16/9;
+  z-index: 1;
+  bottom: 10%;
+  left: -30%;
+}
+
+.Hero_MediaWrapper img:nth-child(2) {
+  width: auto;
+  height: 575px;
+  aspect-ratio: 4/6;
+  object-fit: cover;
+}
+
+@media (min-width: 992px) {
+  .Hero_IconsList {
+    margin: 0;
+  }
+  .Hero_IconsList li {
+    margin: 0 20px 0 0;
+  }
+}
 /* -------------- WORK SECTION STYLES ------------------ */
+
+.Work_Section {
+  background-color: #dad7d7;
+  height: 50vh;
+}
+
 /* -------------- ABOUT SECTION STYLES ----------------- */
 /* -------------- FOOTER SECTION STYLES ---------------- */
