--- a/styles.css
+++ b/styles.css
@@ -18,19 +18,25 @@ body {
 
 nav {
   background-color: #ffffff;
+  height: 10vh;
+  border-bottom: 2px solid black;
+}
+
+aside {
+  background-color: #5CAB7D;
 }
 
 ul li a {
-  color: rgb(138, 40, 213);
+  color: #333030;
   text-decoration: none;
 }
 
 h1 {
   font-family: 'Lato', sans-serif;
-  color: #666666 !important;
+  color: #333030 !important;
   font-weight: 300 !important;
   font-size: 55px !important;
-  text-transform: capitalize;
+  text-transform: uppercase;
   letter-spacing: 0;
   display: flex;
   flex-direction: column;
@@ -38,14 +44,12 @@ h1 {
 
 h1 span {
   font-weight: 900 !important;
-  font-size: 62px;
   letter-spacing: 1px;
-  text-transform: uppercase;
 }
 
 ul li,
 p {
-  color: #666666 !important;
+  color: #333030 !important;
 }
 
 .container {
@@ -54,15 +58,26 @@ p {
 
 
 /* ---------------- NAVIGATION STYLES ------------------ */
-.Nav_logoImg {
-    width: 100px;
+.Aside_logoImg {
+    width: 150px;
     height: auto;
+    border-radius: 50%;
+    border: 3px solid #333030;
 }
 
 .Nav_navList {
     list-style: none;
     display: flex;
     flex-direction: column;
+    padding: 0;
+    margin: 0;
+}
+
+@media (min-width: 768px) {
+  .Nav_navList {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
 }
 
 @media (min-width: 992px) {
@@ -74,128 +89,100 @@ p {
   }
 }
 
-/* -------------- HERO SECTION STYLES ------------------ */
 
-.Hero_Section {
-  height: 80vh;
-  background-color: #ffffff;
-  position: relative;
-  z-index: 0;
-}
-
-.Hero_Section::before {
-  content: '';
-  position: absolute;
-  width: 23%;
-  height: 100%;
-  background-color: #ffffff;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%239f3fff' fill-opacity='0.4'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-  left: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
-  opacity: .25;
-}
-
-.Hero_Wrapper {
-  position: relative;
-  height: 100%;
-}
-
-.Hero_WrapperContent {
-  display: flex;
-  align-items: center;
-  position: relative;
-  z-index: 1;
-}
-
-.Hero_IconsList {
-  margin: 0 20px;
-  display: flex;
-  flex-direction: row;
-}
-
-.Hero_MediaWrapper {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.ImageWrapper {
-  position: relative;
-}
-
-.Hero_MediaWrapper img:nth-child(1) {
-  position: absolute;
-  width: 300px;
-  height: auto;
-  aspect-ratio: 6/4;
-  z-index: 1;
-  bottom: 10%;
-  left: -30%;
-}
-
-.Hero_MediaWrapper img:nth-child(2) {
-  width: auto;
-  height: 575px;
-  aspect-ratio: 4/6;
-  object-fit: cover;
+/* -------------- ASIDE SECTION STYLES ---------------- */
+.Aside_section {
+  width: 100%;
 }
 
 @media (min-width: 992px) {
-  .Hero_IconsList {
-    margin: 0;
-  }
-  .Hero_IconsList li {
-    margin: 0 20px 0 0;
+  .Aside_section {
+    width: 20%;
   }
 }
-
-/* -------------- WORK SECTION STYLES ------------------ */
+/* -------------- WORK SECTION STYLES ---------------- */
 
 .Work_Section {
-  background-color: #eaeaea;
-  height: 50vh;
-}
-
-.Work_SectionList {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.Work_SectionList div {
-  width: 25%;
-  border: 1px solid black;
-}
-
-/* -------------- ABOUT SECTION STYLES ----------------- */
-
-.About_Section {
-  height: 50vh;
-  position: relative;
-  z-index: 0;
-}
-
-.About_Section::before {
-  content: '';
-  position: absolute;
-  width: 100%;
+  background-color: #3A4B40;
   height: 100%;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%239f3fff' fill-opacity='0.4'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-  left: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
-  opacity: .25;
+  width: 100%;
 }
+
+.Work_SectionGrid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  row-gap: 15px;
+  height: auto;
+}
+
+.Work_SectionCard {
+  background-color: #F9F871;
+}
+
+@media (min-width: 768px) {
+  .Work_SectionGrid {
+    display: grid;
+    grid-template-columns: 3fr 3fr 2fr;
+    grid-template-rows: repeat(6, 1fr);
+    column-gap: 15px;
+    row-gap: 15px;
+    height: 100%;
+  }
+
+ .card-shpekc {
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 5;
+    height: 400px;
+  }
+
+  .card-srks {
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 5;
+    grid-row-end: 7;
+  }
+
+  .card-trinity {
+    display: grid;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 4;
+  }
+
+  .card-cudlipp {
+    display: grid;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 7;
+  }
+
+  .card-reframe {
+    display: grid;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 4;
+  }
+}
+
+@media (min-width: 992px) {
+  .Work_Section {
+    height: auto;
+    width: 80%;
+  }
+}
+
+/* -------------- FOOTER SECTION STYLES ---------------- */
 /* -------------- FOOTER SECTION STYLES ---------------- */
 
 .Footer_Section {
   height: 10vh;
-  background-color: #eaeaea;
+  background-color: #ffffff;
 }
