--- a/styles.css
+++ b/styles.css
@@ -21,39 +21,49 @@ html,
 body {
     margin: 0;
     padding: 0;
-    background-image: linear-gradient(to top, #e0e0d6, #c7bbb0, #af9792, #91757d, #6a586d);
-    font-family: "stratos", sans-serif;
+    background-color: #AEA9BB !important;
+    font-family: "stratos", sans-serif !important;
+    color: #333030 !important;
 }
 
 nav {
-  height: 10vh;
-  border-bottom: 1px solid rgb(187 186 186 / 41%);
+  height: 8vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #9c88ff;
+}
+
+nav ul {
+  justify-content: space-evenly;
+  width: 100%;
 }
 
 ul li a {
-  color: #ffffff;
+  font-weight: 700;
   text-decoration: none;
+  text-transform: uppercase;
+  color: #333030;
 }
 
 h1 {
-  font-family: 'Lato', sans-serif;
-  color: #333030 !important;
-  font-weight: 300 !important;
-  font-size: 32px !important;
+  font-weight: 700 !important;
+  font-size: 48px !important;
   text-transform: uppercase;
   letter-spacing: 0;
   display: flex;
   flex-direction: column;
 }
 
-h1 span {
-  font-weight: 900 !important;
-  letter-spacing: 1px;
+h2 {
+  font-weight: 700 !important;
+  font-size: 20px !important;
+  letter-spacing: .5px;
 }
 
 ul li,
 p {
-  color: #333030 !important;
+  font-family: stratos, sans-serif;
 }
 
 .container {
@@ -62,7 +72,7 @@ p {
 
 footer {
   height: 5vh;
-  border-top: 1px solid #ffffff;
+  border-top: 1px solid #9c88ff;
   text-align: center;
 }
 
@@ -72,14 +82,20 @@ footer {
 .hero-section {
   display: flex;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
-  margin: 0 auto;
-  text-align: center;
+  background-image: url("/img/diagonal-striped-brick.png");
 }
 
 .hero-sectionLogo {
-  width: 100px;
+  width: 65%;
+  border-right: 15px solid #9c88ff;
+}
+
+.hero-sectionContent {
+  padding: 30px;
+  margin-left: -7rem;
+  background-color: #AEA9BB;
+  color: #2f3640 !important;
 }
 
 .hero-sectionContent p {
@@ -87,21 +103,35 @@ footer {
 }
 
 .hero-sectionBtn {
-  border: 1px solid rgb(187 186 186 / 41%);
+  border: 1.5px solid #333030;
   margin: 0 10px 0 0;
+  transition: 500ms;
+}
+
+.hero-sectionBtn:hover {
+  background-color: #9c88ff;
+  transition: 500ms;
 }
 
 .hero-sectionBtn a {
-  padding: 10px 25px;
-  display: block
+  display: block;
+  margin-left: 10px;
+  color: #333030;
+}
+
+.hero-sectionBtn img {
+  width: 40px;
+  height: 40px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  border-left: 1.5px solid #333030;
+  margin-left: 10px;
 }
 
 @media (min-width: 992px) {
  .hero-section {
    text-align: left;
    flex-direction: row;
-   align-items: flex-start;
-   margin: 10% auto 0 auto;
  }
 }
 
@@ -113,13 +143,29 @@ footer {
 }
 
 .Work_SectionCard {
+  display: flex;
   width: 100%;
-  background-color: #bdbdbd;
+  background-color: #9c88ff;
   margin: 50px;
+  border: 1px solid #333030;
 }
+
+.Work_SectionContent {
+  border-right: 1px solid #333030;
+}
+
+.Work_SectionImage {
+  max-height: 60vh;
+  overflow-y: scroll;
+}
+
+.Work_SectionImage img {
+  width: 100%;
+}
+
 /* -------------- FOOTER SECTION STYLES ---------------- */
 
 .Footer_Section {
   height: 10vh;
-  color: #ffffff;
+  color: #333030;
 }
